[package]
name = "codecrafters_claude_code"
version = "0.1.0"
edition = "2024"
authors = ["7h3w1zard <7h3w1zard@gmail.com>"]

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }  # async runtime
async-openai = { version = "=0.32.4", features = ["byot", "chat-completion"] }
clap = { version = "4.3.14", features = ["derive"] }                 # CLI argument parsing
serde_json = "1.0.149"     